--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/jquery": "^3.5.16",
     "@types/lodash": "^4.14.191",
     "@types/react-dom": "^18.0.10",
@@ -28,6 +29,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
@@ -39,7 +41,9 @@
     "handlebars": "^4.7.7",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^29.3.1",
     "mini-css-extract-plugin": "^2.7.2",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "webpack": "^5.33.2",
